[gd_scene load_steps=6 format=3 uid="uid://cek4r8pfo1uhm"]

[ext_resource type="Script" path="res://logic/creepagons.gd" id="1_7w21x"]
[ext_resource type="PackedScene" uid="uid://ytcphuftxiuo" path="res://tile_map.tscn" id="1_c525g"]
[ext_resource type="PackedScene" uid="uid://dv1rqj0h7gqfy" path="res://game_engine.tscn" id="2_p5iws"]
[ext_resource type="Script" path="res://logic/hex_piece_logic.gd" id="4_7164l"]
[ext_resource type="PackedScene" uid="uid://cfmefnc3fyvf3" path="res://tutorial.tscn" id="5_hrby2"]

[node name="Creepagons" type="Node2D"]
script = ExtResource("1_7w21x")

[node name="GameBoard" parent="." instance=ExtResource("1_c525g")]
position = Vector2(39, 42)
scale = Vector2(0.765361, 0.765361)
layer_0/tile_data = PackedInt32Array(196608, 1, 0, 262144, 1, 0, 131073, 1, 0, 196609, 1, 0, 262145, 1, 0, 131074, 1, 0, 196610, 1, 0, 262146, 1, 0, 65539, 1, 0, 131075, 1, 0, 196611, 1, 0, 262147, 1, 0, 65540, 1, 0, 131076, 1, 0, 196612, 1, 0, 262148, 1, 0, 5, 1, 0, 65541, 1, 0, 131077, 1, 0, 196613, 1, 0, 262149, 1, 0, 6, 1, 0, 65542, 1, 0, 131078, 1, 0, 196614, 1, 0, 262150, 1, 0, 7, 1, 0, 65543, 1, 0, 131079, 1, 0, 196615, 1, 0, 262151, 1, 0, 65544, 1, 0, 131080, 1, 0, 196616, 1, 0, 262152, 1, 0, 327680, 1, 0, 393216, 1, 0, 458752, 1, 0, 524288, 1, 0, 327681, 1, 0, 393217, 1, 0, 458753, 1, 0, 524289, 1, 0, 327682, 1, 0, 393218, 1, 0, 458754, 1, 0, 524290, 1, 0, 589826, 1, 0, 327683, 1, 0, 393219, 1, 0, 458755, 1, 0, 524291, 1, 0, 589827, 1, 0, 327684, 1, 0, 393220, 1, 0, 458756, 1, 0, 524292, 1, 0, 589828, 1, 0, 655364, 1, 0, 327685, 1, 0, 393221, 1, 0, 458757, 1, 0, 524293, 1, 0, 589829, 1, 0, 655365, 1, 0, 327686, 1, 0, 393222, 1, 0, 458758, 1, 0, 524294, 1, 0, 589830, 1, 0, 655366, 1, 0, 720902, 1, 0, 327687, 1, 0, 393223, 1, 0, 458759, 1, 0, 524295, 1, 0, 589831, 1, 0, 655367, 1, 0, 327688, 1, 0, 393224, 1, 0, 458760, 1, 0, 524296, 1, 0, 589832, 1, 0, 655368, 1, 0, 131081, 1, 0, 196617, 1, 0, 262153, 1, 0, 327689, 1, 0, 393225, 1, 0, 458761, 1, 0, 524297, 1, 0, 589833, 1, 0, 196618, 1, 0, 262154, 1, 0, 327690, 1, 0, 393226, 1, 0, 458762, 1, 0, 524298, 1, 0, 589834, 1, 0, 196619, 1, 0, 262155, 1, 0, 327691, 1, 0, 393227, 1, 0, 458763, 1, 0, 524299, 1, 0, 65545, 1, 0, 131082, 1, 0, 131083, 1, 0, 196620, 1, 0, 262156, 1, 0, 327692, 1, 0, 393228, 1, 0, 458764, 1, 0, 524300, 1, 0)

[node name="ExitButton" type="Button" parent="."]
offset_left = 19.0
offset_top = 13.0
offset_right = 57.0
offset_bottom = 80.0
text = "Exit"

[node name="GameEngine" parent="." instance=ExtResource("2_p5iws")]

[node name="HexPiece" type="Node" parent="GameEngine"]
script = ExtResource("4_7164l")

[node name="CurrentPlayer" type="Label" parent="."]
offset_left = 66.0
offset_top = 13.0
offset_right = 187.0
offset_bottom = 36.0
text = "Current player: "

[node name="MyPlayerId" type="Label" parent="."]
offset_left = 66.0
offset_top = 42.0
offset_right = 170.0
offset_bottom = 65.0
text = "Playing as"

[node name="TilesOccupied" type="Label" parent="."]
offset_left = 407.0
offset_top = 13.0
offset_right = 447.0
offset_bottom = 36.0
text = "tiles occupied = 0"

[node name="AdjcencyLabel" type="Label" parent="."]
offset_left = 33.0
offset_top = 593.0
offset_right = 186.0
offset_bottom = 616.0
text = "Adjacency rules:
"

[node name="Winner" type="Label" parent="."]
visible = false
offset_left = 407.0
offset_top = 42.0
offset_right = 472.0
offset_bottom = 65.0
text = "WINNER"

[node name="Tutorial" parent="." instance=ExtResource("5_hrby2")]

[connection signal="cell_clicked" from="GameBoard" to="." method="_on_cell_clicked"]
[connection signal="pressed" from="ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="ExitButton" to="GameBoard" method="_on_exit_button_pressed"]
[connection signal="game_over" from="GameEngine" to="." method="_on_game_engine_game_over"]
